--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -19,13 +19,19 @@
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.start_time %>
+      <%= event.start_time.strftime("%H:%M") %>
     </p>
   </td>
 
   <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
     <p>
-      <%= event.duration %>
+      <%= (event.duration/60).to_s + " " + "Minuten" %>
+    </p>
+  </td>
+
+  <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+    <p>
+      <%= event.end_time.strftime("%H:%M") %>
     </p>
   </td>
 
