--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -7,6 +7,7 @@
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Description</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Start time</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Duration</th>
+        <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">End time</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Fixed</th>
         <th class="border-b dark:border-slate-600 font-medium p-4 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left">Action</th>
       </tr>
@@ -20,7 +21,7 @@
           <td class="border-b border-slate-100 dark:border-slate-700 p-4">
             <%= Date.today.to_date %> (KW <%= Date.today.strftime('%V') %>)
           </td>
-          <% 5.times do %>
+          <% 6.times do %>
             <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
             </td>
           <% end %>
@@ -28,7 +29,7 @@
       </tr>
       <% if events.where("start_time > ?", Date.today.beginning_of_day).present? %>
         <% events.where("start_time > ?", Date.today.beginning_of_day).each_with_index do |event, i| %> 
-          <% if event.start_time >= event.start_time.beginning_of_day && @events[i-1].start_time < event.start_time.beginning_of_day %>
+          <% if event.start_time >= event.start_time.beginning_of_day && events.where("start_time > ?", Date.today.beginning_of_day)[i-1].end_time < event.start_time.beginning_of_day %>
             <tr class=" bg-sky-500/100">
               <div class="my-2 bg-sky-500/100">
                 <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-black text-xl">
@@ -37,7 +38,7 @@
                 <td class="border-b border-slate-100 dark:border-slate-700 p-4">
                   <%= event.start_time.to_date %> (KW <%= event.start_time.strftime('%V') %>)
                 </td>
-                <% 5.times do %>
+                <% 6.times do %>
                   <td class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400">                
                   </td>
                 <% end %>
