--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,16 +1,18 @@
-<div class="flex items-center justify-between flex-wrap mb-16">
-  <div class="flex flex-wrap my-12 items-center">
-      <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
-        <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
-      <% end %>  
-    <%= link_to new_event_path(date_from_today_view: (Date.today)) do %>
-      <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded ml-12">
-        + Neuer Kalendereintrag
-      </button>
-    <% end %>
+<div class="flex items-center justify-between flex-wrap mb-8">
+  <div class="items-center">
+    <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
+      <h1 class="font-bold text-4xl text-blue-500">Kalender</h1>
+      <%= link_to new_event_path(date_from_today_view: (Date.today)) do %>
+        <button class="bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+          + Neuer Kalendereintrag
+        </button>
+      <% end %>
+    <% end %>  
   </div>
 
+
   <div class="grid grid-cols-1 gap-2">
+    <p class="block uppercase tracking-wide text-gray-700 text-xs font-bold">change view</p>
     <div class="flex justify-end space-x-1">
       <%= link_to events_path(current_view: "today"), data: { turbo: false } do %>
         <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 rounded" title="Ansicht heute">
@@ -43,24 +45,23 @@
         </button>
       <% end %>
     </div>
-    <div>
-      <%= form_with(mode: Event, url: reschedule_events_path, method: :get) do |form| %>
-        <div class="flex mt-2">
-          <div class="mr-2">
-            <%= form.label "PROJECT (OPTIONAL)", style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-            <%= form.select :project, Event.project_names.unshift("none"), { }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:200px" %>
-          </div>
-          <div class="mr-2">
-            <%= form.label :sort_by, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-            <%= form.select :sort_by, ["priority", "duration"], { selected: "priority" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:150px" %>
-          </div>
-          <div class="pb-2 pt-6">
-            <%= form.submit "Reschedule Events", class: "h-full cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
-          </div>
-        </div>
-      <% end %>
-    </div>
   </div>
+
+  <%= form_with(mode: Event, url: reschedule_events_path, method: :get) do |form| %>
+    <div class="flex">
+      <div class="mr-2">
+        <%= form.label "PROJECT (OPTIONAL)", style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.select :project, Event.project_names.unshift("none"), { }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:200px" %>
+      </div>
+      <div class="mr-2">
+        <%= form.label :sort_by, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.select :sort_by, ["priority", "duration"], { selected: "priority" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:150px" %>
+      </div>
+      <div class="pb-2 pt-6">
+        <%= form.submit "Reschedule Events", class: "h-full cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 
