--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -61,7 +61,7 @@
 
           <td class="border-b border-slate-100 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
             <p>
-              <%= @event.fixed %>
+              <%= @event.fixed_date? ? "✅" : "❌" %>
             </p>
           </td>
 
