--- a/app/views/events/done_events.html.erb
+++ b/app/views/events/done_events.html.erb
@@ -1,4 +1,4 @@
-<div id="events">
+<div id="events" class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
   <table class="border-collapse table-auto w-full text-sm">
     <thead>
       <tr>
