--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
   </head>
 
-  <body class="mx-16 mb-16 mt-8 test-class">
+  <body class="mx-16 mb-16 mt-8">
     <%= render 'layouts/flash' %>
     <%= render 'layouts/navigation'%>
     <%= yield %>
