--- a/app/views/events/_view_this_year.html.erb
+++ b/app/views/events/_view_this_year.html.erb
@@ -1,6 +1,8 @@
 <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25 mb-4">
   <div class="relative rounded-xl overflow-auto p-8">
-    <div class="pb-4 text-xl">Jahr <%= Date.today.strftime('%Y') %></div>
+    <div class="pb-4 text-xl">
+      Jahr <%= Date.today.strftime('%Y') %>
+    </div>
     <div class="grid grid-cols-3 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% 12.times do |index| %>
         <div class="p-4 rounded-lg shadow-lg <%= Date.today.month == index+1 ? 'bg-fuchsia-500' : 'bg-white text-slate-700' %>">
@@ -23,7 +25,9 @@
 </div>
 <div class="not-prose relative bg-slate-50 rounded-xl overflow-hidden dark:bg-slate-800/25">
   <div class="relative rounded-xl overflow-auto p-8">
-    <div class="pb-4 text-xl">Jahr <%= Date.today.next_year.strftime('%Y') %></div>
+    <div class="pb-4 text-xl">
+      Jahr <%= Date.today.next_year.strftime('%Y') %>
+    </div>
     <div class="grid grid-cols-3 gap-4 font-mono text-white text-sm text-center font-bold leading-6 bg-stripes-fuchsia rounded-lg">
       <% 12.times do |index| %>
         <div class="p-4 rounded-lg shadow-lg bg-white text-slate-700">
