--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -66,6 +66,14 @@
         <%= form.number_field :priority, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
+        <%= form.label :motivation_level, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.number_field :motivation_level, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+      </div>
+      <div class="px-3 mb-2">
+        <%= form.label :lack_of_motivation_reason, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.text_area :lack_of_motivation_reason, style: "width:500px;height:250px", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+      </div>
+      <div class="px-3 mb-2">
         <%= form.label :fixed_date, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
         <%= form.check_box :fixed_date, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
