--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -55,7 +55,7 @@
       </div>
       <div class="mr-2">
         <%= form.label :sort_by, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.select :sort_by, ["priority", "duration"], { selected: "priority" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:150px" %>
+        <%= form.select :sort_by, ["priority", "duration", "motivation_level"], { selected: "priority" }, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white", style: "width:150px" %>
       </div>
       <div class="pb-2 pt-6">
         <%= form.submit "Reschedule Events", class: "h-full cursor-pointer bg-transparent hover:bg-blue-500 text-blue-500 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
